--- a/archives/toutiao-search/2024-04-16.md
+++ b/archives/toutiao-search/2024-04-16.md
@@ -1,64 +1,83 @@
 # 2024-04-16
 
-共 273 条
+共 289 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 16 2024 17:00:33 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 16 2024 18:01:03 GMT+0800 (China Standard Time) -->
+1. [网友称提灯定损房东或损失176万](https://so.toutiao.com/search?keyword=网友称提灯定损房东或损失176万)
 1. [央媒评卧铺挂帘：有话好说别道德评判](https://so.toutiao.com/search?keyword=央媒评卧铺挂帘：有话好说别道德评判)
-1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
-1. [一组春景图带你看春日大地景观](https://so.toutiao.com/search?keyword=一组春景图带你看春日大地景观)
-1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
-1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
+1. [高标准农田绘就好“丰”景](https://so.toutiao.com/search?keyword=高标准农田绘就好“丰”景)
+1. [女子入住81层的酒店被吓到趴地](https://so.toutiao.com/search?keyword=女子入住81层的酒店被吓到趴地)
+1. [极越员工称买小米SU7后被开除](https://so.toutiao.com/search?keyword=极越员工称买小米SU7后被开除)
 1. [千股跌停背后深层原因是什么](https://so.toutiao.com/search?keyword=千股跌停背后深层原因是什么)
-1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
-1. [大V：大家不是没钱而是疯狂存钱](https://so.toutiao.com/search?keyword=大V：大家不是没钱而是疯狂存钱)
+1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
+1. [油价进入8元时代](https://so.toutiao.com/search?keyword=油价进入8元时代)
 1. [美驻华使馆对中方调查报告保持沉默](https://so.toutiao.com/search?keyword=美驻华使馆对中方调查报告保持沉默)
 1. [湖南有怀孕女子流浪街头？当地否认](https://so.toutiao.com/search?keyword=湖南有怀孕女子流浪街头？当地否认)
 1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
-1. [男子卖花被揭露进价欲上吊自杀](https://so.toutiao.com/search?keyword=男子卖花被揭露进价欲上吊自杀)
-1. [超5000只个股下跌 逾千股跌超10%](https://so.toutiao.com/search?keyword=超5000只个股下跌+逾千股跌超10%)
-1. [大学生吃火锅自备肉卷](https://so.toutiao.com/search?keyword=大学生吃火锅自备肉卷)
-1. [雷军称小米SU7订单远超最乐观预期](https://so.toutiao.com/search?keyword=雷军称小米SU7订单远超最乐观预期)
-1. [花近30万开甘肃麻辣烫18天关门](https://so.toutiao.com/search?keyword=花近30万开甘肃麻辣烫18天关门)
-1. [重庆经信委：燃气收费有误将退还](https://so.toutiao.com/search?keyword=重庆经信委：燃气收费有误将退还)
-1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
-1. [菲律宾媒体抱怨中国游客回归慢](https://so.toutiao.com/search?keyword=菲律宾媒体抱怨中国游客回归慢)
-1. [农民养老金为什么差距大](https://so.toutiao.com/search?keyword=农民养老金为什么差距大)
+1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
+1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
+1. [大V：大家不是没钱而是疯狂存钱](https://so.toutiao.com/search?keyword=大V：大家不是没钱而是疯狂存钱)
 1. [“老默”上海干跑腿被路人喊想吃鱼](https://so.toutiao.com/search?keyword=“老默”上海干跑腿被路人喊想吃鱼)
-1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
-1. [俄军无人机操作员遭乌军无人机击杀](https://so.toutiao.com/search?keyword=俄军无人机操作员遭乌军无人机击杀)
-1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
+1. [超5000只个股下跌 逾千股跌超10%](https://so.toutiao.com/search?keyword=超5000只个股下跌+逾千股跌超10%)
 1. [专家称调休凑假不是为休息](https://so.toutiao.com/search?keyword=专家称调休凑假不是为休息)
-1. [马英九警告赖清德别丢掉大陆橄榄枝](https://so.toutiao.com/search?keyword=马英九警告赖清德别丢掉大陆橄榄枝)
+1. [白宫：乌不是以色列 美国无意参战](https://so.toutiao.com/search?keyword=白宫：乌不是以色列+美国无意参战)
+1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
+1. [大学生吃火锅自备肉卷](https://so.toutiao.com/search?keyword=大学生吃火锅自备肉卷)
+1. [男子卖花被揭露进价欲上吊自杀](https://so.toutiao.com/search?keyword=男子卖花被揭露进价欲上吊自杀)
+1. [小男孩玩耍时不慎从上铺摔下砸到头](https://so.toutiao.com/search?keyword=小男孩玩耍时不慎从上铺摔下砸到头)
+1. [路边老人连扇小孩 小孩捂着脸发抖](https://so.toutiao.com/search?keyword=路边老人连扇小孩+小孩捂着脸发抖)
+1. [独居男外卖1天没取 邻居报警救其命](https://so.toutiao.com/search?keyword=独居男外卖1天没取+邻居报警救其命)
+1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
+1. [孕妇地铁口被砸多方否认是责任主体](https://so.toutiao.com/search?keyword=孕妇地铁口被砸多方否认是责任主体)
 1. [女生学到崩溃父亲安慰](https://so.toutiao.com/search?keyword=女生学到崩溃父亲安慰)
+1. [雷军称小米SU7订单远超最乐观预期](https://so.toutiao.com/search?keyword=雷军称小米SU7订单远超最乐观预期)
+1. [消息称特斯拉裁员赔偿标准为N+3](https://so.toutiao.com/search?keyword=消息称特斯拉裁员赔偿标准为N+3)
+1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
+1. [车主宁愿违停罚款也不停在车位上](https://so.toutiao.com/search?keyword=车主宁愿违停罚款也不停在车位上)
+1. [3000点保卫战再次打响](https://so.toutiao.com/search?keyword=3000点保卫战再次打响)
+1. [俄军无人机操作员遭乌军无人机击杀](https://so.toutiao.com/search?keyword=俄军无人机操作员遭乌军无人机击杀)
+1. [江西抚州12级大风堪比台风登陆](https://so.toutiao.com/search?keyword=江西抚州12级大风堪比台风登陆)
+1. [农民养老金为什么差距大](https://so.toutiao.com/search?keyword=农民养老金为什么差距大)
+1. [曝南宁一菜场小贩往猪肉上洒不明物](https://so.toutiao.com/search?keyword=曝南宁一菜场小贩往猪肉上洒不明物)
+1. [为乌生产炮弹的美陆军工厂爆发火灾](https://so.toutiao.com/search?keyword=为乌生产炮弹的美陆军工厂爆发火灾)
+1. [花近30万开甘肃麻辣烫18天关门](https://so.toutiao.com/search?keyword=花近30万开甘肃麻辣烫18天关门)
+1. [男子街头狂锤女子 路人拍摄不制止](https://so.toutiao.com/search?keyword=男子街头狂锤女子+路人拍摄不制止)
+1. [未全力支持马英九访陆？国民党回应](https://so.toutiao.com/search?keyword=未全力支持马英九访陆？国民党回应)
+1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
+1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
+1. [邓紫棋回应张杰雨中唱《泡沫》](https://so.toutiao.com/search?keyword=邓紫棋回应张杰雨中唱《泡沫》)
+1. [撒贝宁探访小米汽车工厂](https://so.toutiao.com/search?keyword=撒贝宁探访小米汽车工厂)
+1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
+1. [以军称伊朗的袭击将“遭到回应”](https://so.toutiao.com/search?keyword=以军称伊朗的袭击将“遭到回应”)
+1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
+1. [赵本山孙子过百日宴](https://so.toutiao.com/search?keyword=赵本山孙子过百日宴)
+1. [官方通报老人被用三轮拉到银行取款](https://so.toutiao.com/search?keyword=官方通报老人被用三轮拉到银行取款)
+1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
+1. [一组春景图带你看春日大地景观](https://so.toutiao.com/search?keyword=一组春景图带你看春日大地景观)
+1. [重庆经信委：燃气收费有误将退还](https://so.toutiao.com/search?keyword=重庆经信委：燃气收费有误将退还)
+1. [菲律宾媒体抱怨中国游客回归慢](https://so.toutiao.com/search?keyword=菲律宾媒体抱怨中国游客回归慢)
+1. [马英九警告赖清德别丢掉大陆橄榄枝](https://so.toutiao.com/search?keyword=马英九警告赖清德别丢掉大陆橄榄枝)
 1. [德国总理率商业天团访华引关注](https://so.toutiao.com/search?keyword=德国总理率商业天团访华引关注)
 1. [因同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因同事吐槽+办公室取消五一假期)
 1. [余承东：再过两天P70有好消息](https://so.toutiao.com/search?keyword=余承东：再过两天P70有好消息)
 1. [女子确诊肺癌晚期后带癌生存11年](https://so.toutiao.com/search?keyword=女子确诊肺癌晚期后带癌生存11年)
 1. [新“国九条”组合拳扶优限劣](https://so.toutiao.com/search?keyword=新“国九条”组合拳扶优限劣)
 1. [美民众封堵大桥高呼解放巴勒斯坦](https://so.toutiao.com/search?keyword=美民众封堵大桥高呼解放巴勒斯坦)
-1. [邓紫棋回应张杰雨中唱《泡沫》](https://so.toutiao.com/search?keyword=邓紫棋回应张杰雨中唱《泡沫》)
 1. [全长沙都在摸黑上班送娃](https://so.toutiao.com/search?keyword=全长沙都在摸黑上班送娃)
-1. [官方通报老人被用三轮拉到银行取款](https://so.toutiao.com/search?keyword=官方通报老人被用三轮拉到银行取款)
 1. [新加坡总理交棒意味着什么](https://so.toutiao.com/search?keyword=新加坡总理交棒意味着什么)
 1. [泉州一地一夜间现巨幅蛛网](https://so.toutiao.com/search?keyword=泉州一地一夜间现巨幅蛛网)
-1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
-1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
 1. [媒体：卧铺挂帘子不该被道德审判](https://so.toutiao.com/search?keyword=媒体：卧铺挂帘子不该被道德审判)
-1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
 1. [专家：两因素影响以方如何回应伊朗](https://so.toutiao.com/search?keyword=专家：两因素影响以方如何回应伊朗)
-1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
 1. [一季度GDP增速说明了啥](https://so.toutiao.com/search?keyword=一季度GDP增速说明了啥)
 1. [记者：国奥最后一练为开放训练](https://so.toutiao.com/search?keyword=记者：国奥最后一练为开放训练)
 1. [我国考古发掘迄今楚国最高等级墓葬](https://so.toutiao.com/search?keyword=我国考古发掘迄今楚国最高等级墓葬)
 1. [男子爬山遇大量坟墓直呼不对劲](https://so.toutiao.com/search?keyword=男子爬山遇大量坟墓直呼不对劲)
 1. [夫妻闹矛盾女子负气走高速](https://so.toutiao.com/search?keyword=夫妻闹矛盾女子负气走高速)
-1. [未全力支持马英九访陆？国民党回应](https://so.toutiao.com/search?keyword=未全力支持马英九访陆？国民党回应)
 1. [孕妇地铁口被砸伤 胎儿未保住](https://so.toutiao.com/search?keyword=孕妇地铁口被砸伤+胎儿未保住)
 1. [车辆闯红灯撞飞学生 家长暴打司机](https://so.toutiao.com/search?keyword=车辆闯红灯撞飞学生+家长暴打司机)
 1. [央媒评卧铺挂帘：谁买的票谁做主](https://so.toutiao.com/search?keyword=央媒评卧铺挂帘：谁买的票谁做主)
 1. [意大利比萨斜塔即将倒塌？](https://so.toutiao.com/search?keyword=意大利比萨斜塔即将倒塌？)
-1. [男子街头狂锤女子 路人拍摄不制止](https://so.toutiao.com/search?keyword=男子街头狂锤女子+路人拍摄不制止)
 1. [患癌男子4年由年轻到衰老去世](https://so.toutiao.com/search?keyword=患癌男子4年由年轻到衰老去世)
 1. [澳门世界杯：王楚钦战平安宰贤](https://so.toutiao.com/search?keyword=澳门世界杯：王楚钦战平安宰贤)
 1. [网友拍下重庆夜晚电闪雷鸣瞬间](https://so.toutiao.com/search?keyword=网友拍下重庆夜晚电闪雷鸣瞬间)
@@ -81,8 +100,6 @@
 1. [带数百斤黄金货款跑路？商家：没跑](https://so.toutiao.com/search?keyword=带数百斤黄金货款跑路？商家：没跑)
 1. [女子骑沙滩车侧翻身亡 景区回应](https://so.toutiao.com/search?keyword=女子骑沙滩车侧翻身亡+景区回应)
 1. [国家统计局：经济恢复有不平衡性](https://so.toutiao.com/search?keyword=国家统计局：经济恢复有不平衡性)
-1. [以军称伊朗的袭击将“遭到回应”](https://so.toutiao.com/search?keyword=以军称伊朗的袭击将“遭到回应”)
-1. [为乌生产炮弹的美陆军工厂爆发火灾](https://so.toutiao.com/search?keyword=为乌生产炮弹的美陆军工厂爆发火灾)
 1. [与醉汉冲突男生已取保回家](https://so.toutiao.com/search?keyword=与醉汉冲突男生已取保回家)
 1. [英领馆若被炸会怎么做？卡梅伦回应](https://so.toutiao.com/search?keyword=英领馆若被炸会怎么做？卡梅伦回应)
 1. [店员下错单被逼下跪道歉](https://so.toutiao.com/search?keyword=店员下错单被逼下跪道歉)
@@ -105,7 +122,6 @@
 1. [被举报勾引已婚女的领导已停职](https://so.toutiao.com/search?keyword=被举报勾引已婚女的领导已停职)
 1. [因为同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因为同事吐槽+办公室取消五一假期)
 1. [曝水贝有商家携数百斤黄金货款跑路](https://so.toutiao.com/search?keyword=曝水贝有商家携数百斤黄金货款跑路)
-1. [撒贝宁探访小米汽车工厂](https://so.toutiao.com/search?keyword=撒贝宁探访小米汽车工厂)
 1. [地铁站石砖脱落砸中孕妇 心跳停2次](https://so.toutiao.com/search?keyword=地铁站石砖脱落砸中孕妇+心跳停2次)
 1. [五一其实放一天](https://so.toutiao.com/search?keyword=五一其实放一天)
 1. [“提灯定损”涉事违建房屋确定拆除](https://so.toutiao.com/search?keyword=“提灯定损”涉事违建房屋确定拆除)
