--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,59 +1,69 @@
 # 2024-04-19
 
-共 89 条
+共 98 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 04:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 05:00:37 GMT+0800 (China Standard Time) -->
 1. [老人给城管下跪 当事人暂停工作](https://so.toutiao.com/search?keyword=老人给城管下跪+当事人暂停工作)
 1. [菲总统避谈美国是否会为菲对华开战](https://so.toutiao.com/search?keyword=菲总统避谈美国是否会为菲对华开战)
 1. [三个关键词透视中国经济2024年首季报](https://so.toutiao.com/search?keyword=三个关键词透视中国经济2024年首季报)
 1. [樊振东4-3险胜林诗栋晋级世界杯8强](https://so.toutiao.com/search?keyword=樊振东4-3险胜林诗栋晋级世界杯8强)
-1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
-1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
-1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
-1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
-1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
+1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
+1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
+1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
 1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
 1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
-1. [网红飞飞一杯酒妻子：会继续经营酒水](https://so.toutiao.com/search?keyword=网红飞飞一杯酒妻子：会继续经营酒水)
-1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
-1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
-1. [中国女游客在泰国一酒店门口被抢](https://so.toutiao.com/search?keyword=中国女游客在泰国一酒店门口被抢)
-1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
-1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
-1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
-1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
 1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
 1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
-1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
-1. [山东男子李先进坚持施救落水儿童](https://so.toutiao.com/search?keyword=山东男子李先进坚持施救落水儿童)
+1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
+1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
+1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
+1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [网红飞飞一杯酒妻子：会继续经营酒水](https://so.toutiao.com/search?keyword=网红飞飞一杯酒妻子：会继续经营酒水)
 1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
-1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
-1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
-1. [囤日元当理财在年轻人中“火”了](https://so.toutiao.com/search?keyword=囤日元当理财在年轻人中“火”了)
-1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
-1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
+1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
+1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
+1. [家电买得起扔不起如何处理](https://so.toutiao.com/search?keyword=家电买得起扔不起如何处理)
+1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
 1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
+1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
+1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
+1. [山东男子李先进坚持施救落水儿童](https://so.toutiao.com/search?keyword=山东男子李先进坚持施救落水儿童)
+1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
+1. [刘昊然谈首次担任北影节评委](https://so.toutiao.com/search?keyword=刘昊然谈首次担任北影节评委)
+1. [泰宋干节期间交通事故致243人遇难](https://so.toutiao.com/search?keyword=泰宋干节期间交通事故致243人遇难)
+1. [国家医保局价格招采专家组组长被查](https://so.toutiao.com/search?keyword=国家医保局价格招采专家组组长被查)
+1. [吴君如叶童等出席北影节红毯](https://so.toutiao.com/search?keyword=吴君如叶童等出席北影节红毯)
+1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
+1. [囤日元当理财在年轻人中“火”了](https://so.toutiao.com/search?keyword=囤日元当理财在年轻人中“火”了)
+1. [以色列会空袭伊朗核设施吗](https://so.toutiao.com/search?keyword=以色列会空袭伊朗核设施吗)
+1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
+1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
+1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
+1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
+1. [国乒队员谈世界杯新赛制](https://so.toutiao.com/search?keyword=国乒队员谈世界杯新赛制)
+1. [余承东晒12年前照片](https://so.toutiao.com/search?keyword=余承东晒12年前照片)
+1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
+1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
+1. [泰国发生多起中国游客遭车撞击案件](https://so.toutiao.com/search?keyword=泰国发生多起中国游客遭车撞击案件)
+1. [我使馆披露中菲“君子协定”细节](https://so.toutiao.com/search?keyword=我使馆披露中菲“君子协定”细节)
+1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
+1. [马斯克回应部分被裁员工遣散费过低](https://so.toutiao.com/search?keyword=马斯克回应部分被裁员工遣散费过低)
+1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
+1. [中国女游客在泰国一酒店门口被抢](https://so.toutiao.com/search?keyword=中国女游客在泰国一酒店门口被抢)
 1. [专家谈傅崐萁将率国民党民代访陆](https://so.toutiao.com/search?keyword=专家谈傅崐萁将率国民党民代访陆)
 1. [浓眉：不会逃避挑战](https://so.toutiao.com/search?keyword=浓眉：不会逃避挑战)
-1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
 1. [为何三月是本轮黄金走势的分水岭](https://so.toutiao.com/search?keyword=为何三月是本轮黄金走势的分水岭)
-1. [我使馆披露中菲“君子协定”细节](https://so.toutiao.com/search?keyword=我使馆披露中菲“君子协定”细节)
 1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
 1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
-1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
-1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
 1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
 1. [舒马赫妻子再卖8块手表救夫](https://so.toutiao.com/search?keyword=舒马赫妻子再卖8块手表救夫)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
 1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
-1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
-1. [马斯克回应部分被裁员工遣散费过低](https://so.toutiao.com/search?keyword=马斯克回应部分被裁员工遣散费过低)
 1. [南宁春节期间发生4死刑案 嫌犯被捕](https://so.toutiao.com/search?keyword=南宁春节期间发生4死刑案+嫌犯被捕)
 1. [拉萨八廓街：到世界屋脊的街头走走](https://so.toutiao.com/search?keyword=拉萨八廓街：到世界屋脊的街头走走)
 1. [广州一均价千万小区飘窗为泡沫墙体](https://so.toutiao.com/search?keyword=广州一均价千万小区飘窗为泡沫墙体)
@@ -64,7 +74,6 @@
 1. [遭伊朗袭击后以色列为何暂时忍了](https://so.toutiao.com/search?keyword=遭伊朗袭击后以色列为何暂时忍了)
 1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
 1. [约基奇谈横扫湖人：能不能别再提了](https://so.toutiao.com/search?keyword=约基奇谈横扫湖人：能不能别再提了)
-1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
 1. [周鸿祎要卖迈巴赫买国产新能源车](https://so.toutiao.com/search?keyword=周鸿祎要卖迈巴赫买国产新能源车)
 1. [雷军直播霸总式出场](https://so.toutiao.com/search?keyword=雷军直播霸总式出场)
 1. [乌称若乌战败或爆发第三次世界大战](https://so.toutiao.com/search?keyword=乌称若乌战败或爆发第三次世界大战)
